# Stock

./: README.md  requirements.txt
1조/: README.md  김연재B.py
2조/: README.md  이승재2.py  이준서A1.py  이준서A2.py
2조/김민준/: README.md  config.py  main.py  pyproject.toml
3조/: README.md  김종원.txt
3조/24098손현진/: s1.Volatility breakout.py  s2.py
sparkle-stock-server/: .gitignore  main.py
sparkle-stock-server/module/: csv_utils.py
sparkle-stock-server/module/data/: INTC20092024.csv  NVDA20092024.csv
안호성/: main.py  model.py  requirements.txt  trace.py
